<resources>
    <string name="app_name">SelfEnabler</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_subject">subject</string>
    <string name="title_activity_profile">profile</string>
    <string name="title_activity_test_screen1">testScreen1</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="select_subject">Select Subject</string>
    <string name="select_chapter">Select Chapter</string>
    <string name="select_topic">Select Topic</string>
    <string name="dateerror">Enter a valid date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_material_view_pager">testMaterialViewPager</string>
    <string name="timer">Timer</string>

    <string name="register">Register</string>
    <string name="title_activity_best_webview_payuser">Payment</string>
    <string name="error_string">Something\'s not right.\n try again for something better.\n or Check Internet Connection</string>
    <string name="error_reportlist">Report List Does not exist</string>
    <string name="listoftopics">List of Topics:</string>
    <string name="action_search">search</string>
    <string name="topics">Topics</string>
    <string name="notification_error_ssl_cert_invalid">SslError!</string>


    <string name="nameerror">Enter a Valid Name</string>
    <string name="emailerror">Enter a Valid Email Id</string>
    <string name="mobileerror">Enter a Valid Mobile Number (10 Digits)</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">SelfEnabler</string>
    <string name="slide_1_desc">Help yourself to identify your Knowledge Level with Free Assessments on every Subject, every Topic</string>

    <string name="slide_2_title">3 AM Friend</string>
    <string name="slide_2_desc">Your 3AM friend to help you out wherever you get Stucked!!</string>

    <string name="slide_3_title">Participate &amp; Earn</string>
    <string name="slide_3_desc">Create &amp; Participate in Daily Quizes to Boost Up your Knowledge &amp; Earn Rewards</string>


    <string name="slide_4_title">Life &amp; Career</string>
    <string name="slide_4_desc">Confused? Why so, when I am here - Your Career Profiler</string>


    <string name="slide_5_title">Experts Here</string>
    <string name="slide_5_desc">Wanna Catch Up with Experts? Here is the Platform: Videos on every Subject, every Topic</string>


    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>


    <array name="array_dot_active">
        <item>@color/dot_active_screen6</item>
        <item>@color/dot_active_screen1</item>
        <item>@color/dot_active_screen2</item>
        <item>@color/dot_active_screen3</item>
        <item>@color/dot_active_screen4</item>
        <item>@color/dot_active_screen5</item>
    </array>

    <array name="array_dot_inactive">
        <item>@color/dot_inactive_screen6</item>
        <item>@color/dot_inactive_screen1</item>
        <item>@color/dot_inactive_screen2</item>
        <item>@color/dot_inactive_screen3</item>
        <item>@color/dot_inactive_screen4</item>
        <item>@color/dot_inactive_screen5</item>
    </array>
    <!--pawan-->
    <!--<string name="facebook_app_id">1108879509247945</string>-->
    <!--t4a-->
    <string name="app_id">1577416942560762</string>
    <!--  <string name="app_id">475131199523814</string>-->


    <string name="facebook_app_id">1577416942560762</string>
    <string name="fb_login_protocol_scheme">fb1577416942560762</string>
    <!--<string name="fb_login_protocol_scheme">1577416942560762</string>-->
    <string name="title_activity_main2">Facebook Login Activity</string>



    <string name="title_home">Home</string>
    <string name="title_study">Study</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_topics">TOPICS</string>
    <string name="title_search">Search</string>
    <string name="title_ask">Ask</string>
    <string name="title_Ask">Ask</string>
</resources>
